<?xml version="1.0"?>
<package>
  <name>cassie_description</name>
  <version>1.0.0</version>
  <description>Cassie model description</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jreher@caltech.edu">Jenna Reher</maintainer>
  <maintainer email="stephane.caron@normalesup.org">Stéphane Caron</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
